--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="losuj">
+    <div id="container">
 
         <div><button><h3>Wylosuj Szóstkę!</h3></button></div>
     </div>
