--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <div id="container">
 
-        <div><button><h3>Wylosuj Szóstkę!</h3></button></div>
+        <div><button><h3>WYLOSUJ SZÓSTKĘ!</h3></button></div>
     </div>
+    <button id="reset" class="reset active" >Reset</button>
 
     <script src="script.js"></script>
 </body>
