--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <title>Lotto - 6 numbers lucky generator</title>
 </head>
 <body>
-    <div id="container">
-
-        <div><button><h3>WYLOSUJ SZÓSTKĘ!</h3></button></div>
+    <div class="container">
+        <div class="btn-los"><button>Losój</button></div>
+        <div class="numbers"></div>
+        <div id="reset" class="reset active"><button>Reset</button></div>
     </div>
-    <button id="reset" class="reset active" >Reset</button>
+    
 
     <script src="script.js"></script>
 </body>
+
+
 </html>
