--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="btn-los"><button>Losój</button></div>
+        <div class="btn-los"><button>Wylosuj szóstkę!</button></div>
         <div class="numbers"></div>
         <div id="reset" class="reset active"><button>Reset</button></div>
     </div>
