6 is locked in num array

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="btn-los"><button>Wylosuj szóstkę!</button></div>
+        <div class="btn-los">
+            <button>Wylosuj szóstkę!</button></div>
+            <h3 style='text-align:center; color: #666; text-transform: uppercase; letter-spacing: 2px;'>6 jest tymczasowo zablokowana!</h3>
         <div class="numbers"></div>
         <div id="reset" class="reset active"><button>Reset</button></div>
     </div>
