--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <div class="btn-los">
+            <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
             <button>Wylosuj szóstkę!</button></div>
             <h3 style='text-align:center; color: #666; text-transform: uppercase; letter-spacing: 2px;'>6 jest tymczasowo zablokowana!</h3>
         <div class="numbers"></div>
