--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Lotto - 6 numbers lucky generator</title>
 </head>
 <body>
+    <navbar>
+        <ul><li></li></ul>
+    </navbar>
     <div class="container">
         <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
     </div>
