--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <title>Lotto - 6 numbers lucky generator</title>
 </head>
 <body>
-    <navbar>
-        <ul><li></li></ul>
+    <navbar class="navbar">
+        <ul><li><a href="/">QLDN</a></li></ul>
+        <ul>
+            <li><a href="https://www.lotto.pl/lotto/zagraj">Lotto</a></li>
+        </ul>
     </navbar>
     <div class="container">
         <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
