--- a/index.html
+++ b/index.html
@@ -12,31 +12,42 @@
     <navbar class="navbar">
         <ul><li><a href="/">QLDN</a></li></ul>
         <ul>
-            <li><a href="https://www.lotto.pl/lotto/zagraj">Lotto</a></li>
+            <li class="nav-link"><a href="https://www.lotto.pl/lotto/zagraj">Lotto</a></li>
         </ul>
     </navbar>
-    <div class="container">
-        <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
-    </div>
-    <div class="container">
-        <!-- Lotto -->
-        <div class="btn-los">         
-            <button>Wylosuj szóstkę!</button>
+    <section class="main">
+        <div class="container">
+            <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
         </div>
-    </div>
-    <!-- Euro Jackpot -->
-    <div class="container">
-        <div class="btn-los-euro">
-            <button class="euro-btn">Losuj Euro Jackpot</button>
+        <div class="container">
+            <!-- Lotto -->
+            <div class="btn-los">         
+                <button>Wylosuj szóstkę!</button>
+            </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="numbers"></div>
-        <div class="numbersEuro"></div>
-        <div id="reset" class="reset active">
-            <button>Reset</button>
+        <!-- Euro Jackpot -->
+        <div class="container">
+            <div class="btn-los-euro">
+                <button class="euro-btn">Losuj Euro Jackpot</button>
+            </div>
         </div>
-    </div>
+        <div class="container">
+            <div class="numbers"></div>
+            <div class="numbersEuro"></div>
+            <div id="reset" class="reset active">
+                <button>Reset</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <footer>
+            <div class="container">
+            <h3>Dariusz Grzegorczyk &#169 2022</h3>
+            </div>
+        </footer>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
