--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <navbar class="navbar">
         <ul><li><a href="/">QLDN</a></li></ul>
+        <ul class="date"><li id="date"></li><li id="hour"></li></ul>
         <ul>
             <li class="nav-link"><a href="https://www.lotto.pl/lotto/zagraj">Lotto</a></li>
         </ul>
@@ -49,5 +50,6 @@
     </section>
 
     <script src="script.js"></script>
+    <script src="date.js"></script>
 </body>
 </html>
