added wyniki website

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             </div>
         </div>
     </section>
+    <section class="lotto-wyniki">
+        <div class="container"> 
+            <object type="text/html" data="https://megalotto.pl/" id="web-frame" width="100%" height="600px" >
+            </object>
+         </div>
+
+    </section>
 
     <section class="footer">
         <footer>
