working on copy to clipboard

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div id="reset" class="reset active">
                 <button>Reset</button>
             </div>
+            <button id="clipboard">Kopiuj</button>
         </div>
     </section>
     <section class="lotto-wyniki">
