working on copy button

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
         <div class="container">
             <div class="numbers"></div>
             <div class="numbersEuro"></div>
+           <div class="buttons">
             <div id="reset" class="reset active">
-                <button>Reset</button>
+                <button>Reset</button>          
             </div>
-            <!-- <button id="clipboard">Kopiuj</button> -->
+            <div id="clipboard" class="clipboard active">
+                <button>Copy</button>          
+            </div>
+           </div>
         </div>
     </section>
     <section class="lotto-wyniki">
