--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <navbar class="navbar">
         <ul><li><a href="/">QLDN</a></li></ul>
-        <ul class="date"><li id="fullDate"><span id="dayOfTheWeek"></span><span  id="date"></span></li><li id="hour"></li></ul>
+        <ul class="date">
+            <li id="fullDate"><span id="dayOfTheWeek"></span><span  id="date"></span></li>
+            <li id="hour"></li></ul>
         <ul>
             <li class="nav-link"><a href="https://www.lotto.pl/lotto/zagraj">Lotto</a></li>
         </ul>
