--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     </navbar>
     <section class="main">
         <div class="container">
+            <h3>Dni losowania:</h3>
+           <div class="losowania">
+            <p>Lotto: Wtorek Czwartek Sobota | 22:00 </p>
+            <p>Euro Jackpot: Wtorek Piątek | około 21:00 | zakłady do 19:00 </p>
+           </div>
+        </div>
+        <div class="container">
             <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
         </div>
         <div class="container">
