added fetch ftom api

--- a/index.html
+++ b/index.html
@@ -72,5 +72,7 @@
 
     <script src="script.js"></script>
     <script src="date.js"></script>
+    <script src="API-lotto.js"></script>
+   
 </body>
 </html>
