working on fetch from lotto

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
     <script src="script.js"></script>
     <script src="date.js"></script>
-    <script src="API-lotto.js"></script>
+    <script src="API.js"></script>
+    
    
 </body>
 </html>
