draw days styling

--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
     </navbar>
     <section class="main">
         <div class="container">
-            <h3>Dni losowania:</h3>
-           <div class="losowania">
-            <p>Lotto: Wtorek Czwartek Sobota | 22:00 </p>
-            <p>Euro Jackpot: Wtorek Piątek | około 21:00 | zakłady do 19:00 </p>
-           </div>
-        </div>
-        <div class="container">
             <img style="margin-bottom: 20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmNaHEOPBwnGPRvBDlvOzNaev212XKbZwy4g&usqp=CAU" alt='4 leaves clover'/>
         </div>
         <div class="container">
@@ -54,13 +47,23 @@
            </div>
         </div>
     </section>
+    <section>
+        <div class="container draws">
+            <h3>Dni losowania:</h3>
+           <div class="draws-info">
+            <p><span><strong>Lotto:</strong></span> <span> wtorek, czwartek, sobota 22:00</span> <span>zakłady do 21:45</span> </p>
+            <p><span><strong>Euro Jackpot:</strong></span> <span>wtorek, piątek około 21:00</span> <span>zakłady do 19:00</span> </p>
+           </div>
+        
+        </div>
+    </section>
     <section class="lotto-wyniki">
         <div class="container"> 
             <object type="text/html" data="https://megalotto.pl/" id="web-frame" width="100%" height="600px" >
             </object>
          </div>
-
-    </section>
+         
+        </section>
 
     <section class="footer">
         <footer>
